--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             <img src="images/que_icon.svg" alt="icon">
           </div>
           <div class="view back-view">
-            <img src="images/img-3.png" alt="card-img">
+            <img src="images/img-4.png" alt="card-img">
           </div>
         </li>
         <li class="card">
@@ -167,7 +167,23 @@
             <img src="images/que_icon.svg" alt="icon">
           </div>
           <div class="view back-view">
-            <img src="images/img-2.png" alt="card-img">
+            <img src="images/img-4.png" alt="card-img">
+          </div>
+        </li>
+        <li class="card">
+          <div class="view front-view">
+            <img src="images/que_icon.svg" alt="icon">
+          </div>
+          <div class="view back-view">
+            <img src="images/img-4.png" alt="card-img">
+          </div>
+        </li>
+        <li class="card">
+          <div class="view front-view">
+            <img src="images/que_icon.svg" alt="icon">
+          </div>
+          <div class="view back-view">
+            <img src="images/img-4.png" alt="card-img">
           </div>
         </li>
         <li class="card">
@@ -183,11 +199,9 @@
             <img src="images/que_icon.svg" alt="icon">
           </div>
           <div class="view back-view">
-            <img src="images/img-5.png" alt="card-img">
+            <img src="images/img-6.png" alt="card-img">
           </div>
         </li>
-        
-        
       </ul>
     </div>
 
